--- a/resume.tex
+++ b/resume.tex
@@ -38,14 +38,11 @@
         ~
 	\href{tel:+33686588579}{\textit{(+33)686-588-579}}
 	\href{mailto:sebastien@boyron.eu}{\textit{\textbf{sebastien@boyron.eu}}}
-        ~
-        married, 1 child 
-        driving licence B
     \section{Languages}
         \textbf{French}\includegraphics[scale=0.40]{img/5stars.png}
-        \textbf{English}\includegraphics[scale=0.40]{img/4stars.png}
+        \textbf{English}\includegraphics[scale=0.40]{img/3stars.png}
         ~
-    \section{Social links}
+    \section{Social Links}
         \href{https://hub.docker.com/u/dj4ngo/}{dockerhub: \underline{dj4ngo}}
 	\href{https://github.com/dj4ngo}{github: \underline{dj4ngo}}
         \href{https://gitlab.com/dj4ngo}{gitlab: \underline{dj4ngo}}
@@ -57,7 +54,7 @@
         \textbf{DevOps}\includegraphics[scale=0.40]{img/5stars.png}
         \textbf{Agile}\includegraphics[scale=0.40]{img/4stars.png}
         ~
-    \section{Distributions}
+    \section{Linux Distributions}
         \textbf{alpine}\includegraphics[scale=0.40]{img/5stars.png}
         \textbf{centos}\includegraphics[scale=0.40]{img/4stars.png}
         \textbf{clonezilla}\includegraphics[scale=0.40]{img/5stars.png}
@@ -88,75 +85,73 @@
         \textbf{vim}\includegraphics[scale=0.40]{img/5stars.png}
 \end{aside}
 
-\section{Carrier objective}
+\section{Carrier Objective}
+    
     To leverage my experience in large production platforms, my affinity
-    for automation and devops methods and my rigor acquired during my self-employed
-    adventure in enhancement of open-source products professionalism and work on future
-    technology in computing by working on cloud virtualization and containerization
-    technologies and next computing steps in the future.
+    for automation \& devops methods to enhance opensource products professionnalism
+    and work on future IT technologies. 
 
-\section{Work experience}
+\section{Work Experience}
 \begin{entrylist}
     \entry
-        {since 10-16}
+        {from oct.16\\to date}
         {Technical Leader, Linux Cloud and Virtualization}
-        {squad, Toulouse, France}
-        {Created squad community around linux, cloud and virtualization. Managing budget, create a 
-        team over multiple squad sites and brings this team together around a common technological 
-        scanning on containers, kubernetes, openstack, ELK, IaaC ...
-        Setup internal training around Linux and Openstack.
+        {Squad, Toulouse, France}
+	{Create squad community around linux, cloud and virtualization. Manage budget, build \& develop a 
+        team over multiple squad sites, train team with common technological 
+        scanning on containers, kubernetes, ELK, IaaC, Linux and Openstack.
         }
     \entry
-        {since 03-15}
-        {Linux cloud \& DevOps engineer}
-        {squad / orange OINIS ITE, Toulouse, France}
+        {from  mar.15\\to date}
+        {Linux Cloud \& DevOps Engineer}
+        {Squad / Orange OINIS ITE, Toulouse, France}
         {Create standards for virtualization with VMWare and network virtualization with Juniper 
         Contrail and Openstack for orange group. In charge of CI/CD process definition, 
         installation and configuration. CI/CD based on gitlab, fully customized dockers and jenkins.
         Guarantee deliveries quality. Setup bash and python development rules and standards.
         Fully automate using ansible and templatize using jinja2 complex deployments of openstack and
-        contrail using director tripleO. Referent for monitoring solution of whole openstack platforms
+        contrail using director tripleO. In charge of openstack platforms monitoring solutions
         using multiples orange monitoring tools.
         }
     \entry
-        {09-14 - 03-15}
-        {System and virtualization engineer}
-        {sii / orange business services, Toulouse, France}
+        {from sept.14\\to mar.15}
+	{System \& Virtualization Engineer}
+        {SII / Orange Business Services, Toulouse, France}
         {Technical manager of WASAC platform (automated OBS customers routers configuration).
-        System and network team management (5 persons).
-        Plan evolution, maintenance, upgrade of ESXi platform (10 ESXi on two datacenters,
+        Managed System and network team (5 persons).
+	Planned evolution, maintenance \& upgrade of ESXi platform (10 ESXi on two datacenters,
         200 virtual machines). 
-        Responsible of platform in medium term capacity planning.
-        Upgrade and optimize PostgresSQL databases with dalibo (12 databases).
+        Responsible for platform in medium term capacity planning.
+        Upgraded and optimized PostgresSQL databases with dalibo (12 databases).
         }
     \entry
-        {09-10 - 09-14}
-        {System and virtualization engineer}
-        {sii / rockwell collins france, Toulouse, France}
-        {I worked on an embedded containers application server (OpenVZ) for airbus A350.
-        Design and operate a unified development environment.
-        Automatize and maintain functional tests platform.
-        Development on initrd and openvz fine tuning.
+        {from sept.10\\to sept.14}
+        {System \& Virtualization Engineer}
+        {SII / Rockwell Collins France, Toulouse, France}
+        {Worked on an embedded containers application server (OpenVZ) for airbus A350.
+        Designed and operated a unified development environment.
+        Automatized and maintained functional tests platform.
+        In charge of Initrd and Openvz fine tuning development.
         }
     \entry
-        {09-09 - 09-12}
+        {from sept.09\\to sept.12}
         {Linux Engineer}
-        {self-company, Perpignan, France}
-        {Setup and maintenance of unix and linux systems for several customers.
-        Design and development of an automated backup tool for SMEs.
-        Project managment of Probalt, a company management simulation tool specialized in 
-        logistics and transports destined to training teachers.
+        {Freelance, Perpignan, France}
+        {Set up and Maintained unix and linux systems for various customers.
+        Designed and developed an automated backup tool for small businesses.
+	Created a management simulation tool called Probalt which helps with training
+	for teachers specialized in the transportation \& logistics industries.
         }
     \entry
-        {03-09 - 09-09}
-        {Project manager assistant (trainee)}
-        {ensto france, Perpignan, France}
-        {Assist the project manager in the ERP migration (PMICS to cegid PMI).
-        Modeling all company processes and propose some enhancements.
-        Setup a project and resources management tool.
-        Diary management of users implied as key user in this project (15 persons).
-        Management of IT parc on three distant sites (Nefiach, Paris, Spain).
-        Design and setup a new high-available and multi-site servers infrastructure.
+        {from mar.09\\to sept.09}
+        {Project Manager Assistant}
+        {ENSTO France, Perpignan, France}
+        {Assisted project manager with ERP migration (formerly PMICS, now cegid PMI).
+        Modeled all company processes and suggested improvements.
+        Set up a project and resources management tool.
+        Oversaw key users schedule management (15 persons).
+        Managed the IT parc for three different satellite sites (Nefiach, Paris, Spain).
+        Designed and set up a new high-available and multi-site servers infrastructure.
         }
 \end{entrylist}
 
@@ -210,23 +205,20 @@
         \textbf{maas}\includegraphics[scale=0.40]{img/4stars.png}
         \textbf{tripleO}\includegraphics[scale=0.40]{img/5stars.png}
 	~
-    \section{Development}
-        \textbf{Bash}\includegraphics[scale=0.40]{img/5stars.png}
-        \textbf{C}\includegraphics[scale=0.40]{img/3stars.png}
-        \textbf{jinja2}\includegraphics[scale=0.40]{img/5stars.png}
-        \textbf{latex}\includegraphics[scale=0.40]{img/3stars.png}
-        \textbf{nodejs}\includegraphics[scale=0.40]{img/3stars.png}
-        \textbf{perl}\includegraphics[scale=0.40]{img/3stars.png}
-        \textbf{python}\includegraphics[scale=0.40]{img/4stars.png}
-        \textbf{RPM build}\includegraphics[scale=0.40]{img/5stars.png}
+    \section{Databases}
+        \textbf{firebird}\includegraphics[scale=0.40]{img/4stars.png}
+        \textbf{mariaDB}\includegraphics[scale=0.40]{img/3stars.png}
+        \textbf{postgres}\includegraphics[scale=0.40]{img/4stars.png}
+        \textbf{sqlite}\includegraphics[scale=0.40]{img/4stars.png}
+        ~
 \end{aside}
-\section{Training and Certifications}
+\section{Training \& Certifications}
 \begin{entrylist}
     \entry
         {2016}
         {RedHat Openstack Administrator}
         {Toulouse, France}
-        {Training modified for orange group. Including major part of CL210 an ceph part from CL310
+        {Modified Training for orange group, including major part of CL210 an ceph part from CL310
 	\href{https://www.redhat.com/fr/services/training/cl210-red-hat-openstack-administration}
 	{[\underline{more}]}}
     \entry
@@ -257,37 +249,37 @@
 \section{Education}
 \begin{entrylist}
     \entry
-        {2007 - 2009}
+        {from 2007\\to 2009}
         {Ingénieur Chef de Projet en Informatique et Robotique}
         {IMERIR, Perpignan, France}
-        {Engineering Degree in computing and robotics project leader 
+	{Computing \& Robotics Chief Project Engineer
 	\textbf{with honours}\\
         \href{https://www.imerir.com/}{[\underline{more}]}
 	}
     \entry
-        {2007 - 2009}
+        {from 2007\\to 2009}
         {Mastère EAI, Electronique, Automatique, Informatique}
         {UPVD, Perpignan, France}
-	{four-year degree in Electronic, Direct dialing and Computing - University of Perpignan Via Domitia\\
+	{Four-year degree in Electronic, Direct Dialing and Computing - University of Perpignan Via Domitia\\
         \href{https://www.univ-perp.fr/master-electronique-automatique-informatique-28229.kjsp}{[\underline{more}]}
 	}
     \entry
-        {2007 - 2008}
+        {from 2007\\to 2008}
         {Licence Informatique}
         {UPVD, Perpignan, France}
-	{Bachelor of computer science - University of Perpignan Via Domitia
+	{Three-year Bachelor of computer science - University of Perpignan Via Domitia
 	\textbf{with honours}
         \href{https://www.univ-perp.fr/licence-informatique-4727.kjsp}{[\underline{more}]}
 	}
     \entry
-        {2004 - 2006}
-        {DUT GEII Génie Electronique et Informatique Industrielle}
+        {from 2004 \\to 2006}
+        {DUT GEII}
         {University Institute of Technology, Nîmes, France}
-	{two-year technical degree in Electrical Engineering and Industrial Computing 
+	{Two-year technical degree in Electrical Engineering and Industrial Computing 
         \href{http://www.iut-nimes.fr/dut/geii}{[\underline{more}]}
 	}
     \entry
-        {2003 - 2004}
+        {from 2003\\to 2004}
         {Bac S SI (spécialité Mathématiques)}
         {Lycée Denis Diderot, Narbonne, France}
 	{Bac Scientifique option sciences de l'ingénieur (spécialité Mathématiques) \\
@@ -299,25 +291,20 @@
 \section{Memberships}
 \begin{entrylist}
     \entry
-        {technical}
+        {Technical}
         {\href{https://www.tetalab.org/en}{Tetalab [\underline{more}]}}
         {Toulouse hacker space}
         {\emph{Design, share, learn}}
     \entry
-        {computing}
+        {Computing}
         {\href{https://www.openstack.org/foundation/}{Openstack foundation [\underline{more}]}}
         {World wide community}
         {\emph{Promote the development, distribution and adoption of Openstack}}
     \entry
-        {computing}
+        {Computing}
         {\href{https://github.com/mhackgyver-squad/mhackgyver}{Mhackgyver pentest team [\underline{more}]}}
         {French pentest team}
         {\emph{World wide security contests, local events, ctf, share, learn, develop}}
-    \entry
-        {local life}
-        {\href{https://www.mairie-levignac.com/}{Member of my town committee [\underline{more}]}}
-        {Levignac}
-        {\emph{Make the town living and attractive.}}
 \end{entrylist}
 \newpage
 
@@ -331,11 +318,15 @@
         \textbf{sdn}\includegraphics[scale=0.40]{img/3stars.png}
         \textbf{tcp}\includegraphics[scale=0.40]{img/4stars.png}
         ~
-    \section{Databases}
-        \textbf{firebird}\includegraphics[scale=0.40]{img/4stars.png}
-        \textbf{mariaDB}\includegraphics[scale=0.40]{img/3stars.png}
-        \textbf{postgres}\includegraphics[scale=0.40]{img/4stars.png}
-        \textbf{sqlite}\includegraphics[scale=0.40]{img/4stars.png}
+    \section{Development}
+        \textbf{Bash}\includegraphics[scale=0.40]{img/5stars.png}
+        \textbf{C}\includegraphics[scale=0.40]{img/3stars.png}
+        \textbf{jinja2}\includegraphics[scale=0.40]{img/5stars.png}
+        \textbf{latex}\includegraphics[scale=0.40]{img/3stars.png}
+        \textbf{nodejs}\includegraphics[scale=0.40]{img/3stars.png}
+        \textbf{perl}\includegraphics[scale=0.40]{img/3stars.png}
+        \textbf{python}\includegraphics[scale=0.40]{img/4stars.png}
+        \textbf{RPM build}\includegraphics[scale=0.40]{img/5stars.png}
         ~
     \section{Security}
         \textbf{chroot}\includegraphics[scale=0.40]{img/3stars.png}
@@ -366,29 +357,29 @@
 \section{Side Projects}
 \begin{entrylist}
     \entry
-        {python}
+        {Python}
 	{\href{https://github.com/ansible/ansible}{Red Hat - ansible [\underline{more}]}}
         {community contributor}
         {bugfix on docker and packages parts}
     \entry
-        {python}
+        {Python}
         {\href{https://github.com/gr0und-s3ct0r/niet}{Niet [\underline{more}]}}
         {owner}
-        {yaml and json parser for bash due to lack of powerfull yaml parser in bash}
+        {Yaml and json parser for bash due to lack of powerfull yaml parser in bash}
     \entry
-        {python}
+        {Python}
         {\href{https://github.com/gr0und-s3ct0r/cerber}{Cerber [\underline{more}]}}
         {owner}
         {auto-generation of seccomp profile for docker containers by learning phase}
     \entry
-        {docker}
-	{\href{https://github.com/dj4ngo/docker-rpi-alpine-scratch}{docker-rpi [\underline{more}]}}
+        {Docker}
+	{\href{https://github.com/dj4ngo/docker-rpi-alpine-scratch}{Docker-rpi [\underline{more}]}}
         {personal project}
-	{Cross-compile docker image for RaspberryPi (arm) directly from dockerhub. Inspired by 
+	{Cross-compile RaspberryPi Alpine Linux docker image (arm) directly from dockerhub. Inspired by 
 	\href{https://resin.io/blog/building-arm-containers-on-any-x86-machine-even-dockerhub/}{\underline{resin.io}}
 	work and adapted to alpine linux.}
     \entry
-        {python}
+        {Python}
 	{Plugin for
 	\href{https://www.home-assistant.io/}{\underline{home assistant}}
 	to integrate
@@ -396,8 +387,8 @@
         {private project}
 	{Integration of my solar panel domotic box to my home assistant server}
     \entry
-        {ansible}
-        {\href{https://gitlab.com/squad-lcv/labo}{squad community lab [\underline{more}]}}
+        {Ansible}
+        {\href{https://gitlab.com/squad-lcv/labo}{Squad community lab [\underline{more}]}}
 	{owner}
         {Transformation in administration of squad community sandbox server to Infrastructure as a code project}
 \end{entrylist}
@@ -442,7 +433,7 @@
 \end{entrylist}
 ~
 \begin{flushright}
-    \emph{Latest update - June, 2018}
+    \emph{Latest update - July, 2018}
 \end{flushright}
 
 \begin{aside}
