Add Ol experience

--- a/resume.tex
+++ b/resume.tex
@@ -94,7 +94,17 @@
 \section{Work Experience}
 \begin{entrylist}
     \entry
-        {from oct.16\\to date}
+        {from nov.18\\to date}
+        {Cloud consultant}
+        {Objectif-libre, Toulouse, France}
+	{Work on rootless containers solutions for HPC solution (tested RHEL6, podman, usernetes
+        moby, buildah ...) in CNES. Architect a Paas solution (Openstack) and 
+        a CaaS automation solution (automate Openshift platforms) for Airbus DS Intelligence.
+        We are daily working with Openstack, docker, kubernetes, ansible, ceph, git in Objectif-Libre
+        for several customers.
+        }
+    \entry
+        {from oct.16\\to oct.18}
         {Technical Leader, Linux Cloud and Virtualization}
         {Squad, Toulouse, France}
 	{Create squad community around linux, cloud and virtualization. Manage budget, build \& develop a 
@@ -102,12 +112,12 @@
         scanning on containers, kubernetes, ELK, IaaC, Linux and Openstack.
         }
     \entry
-        {from  mar.15\\to date}
+        {from  mar.15\\to oct.18}
         {Linux Cloud \& DevOps Engineer}
         {Squad / Orange OINIS ITE, Toulouse, France}
         {Create standards for virtualization with VMWare and network virtualization with Juniper 
-        Contrail and Openstack for orange group. In charge of CI/CD process definition, 
-        installation and configuration. CI/CD based on gitlab, fully customized dockers and jenkins.
+        Contrail and Openstack for orange group. In charge of CI/CD (process,
+        installation and configuration) based on gitlab, dedicated docker images and jenkins.
         Guarantee deliveries quality. Setup bash and python development rules and standards.
         Fully automate using ansible and templatize using jinja2 complex deployments of openstack and
         contrail using director tripleO. In charge of openstack platforms monitoring solutions
@@ -142,20 +152,19 @@
 	Created a management simulation tool called Probalt which helps with training
 	for teachers specialized in the transportation \& logistics industries.
         }
+
+\newpage
     \entry
         {from mar.09\\to sept.09}
         {Project Manager Assistant}
         {ENSTO France, Perpignan, France}
-        {Assisted project manager with ERP migration (formerly PMICS, now cegid PMI).
+        {Assisted project manager with ERP migration.
         Modeled all company processes and suggested improvements.
-        Set up a project and resources management tool.
         Oversaw key users schedule management (15 persons).
         Managed the IT parc for three different satellite sites (Nefiach, Paris, Spain).
         Designed and set up a new high-available and multi-site servers infrastructure.
         }
 \end{entrylist}
-
-\newpage
 \begin{aside}
     \section{Administration}
         \textbf{ansible}\includegraphics[scale=0.40]{img/5stars.png}
@@ -177,21 +186,22 @@
         \textbf{ssh}\includegraphics[scale=0.40]{img/5stars.png}
         \textbf{systemctl}\includegraphics[scale=0.40]{img/5stars.png}
         \textbf{system V}\includegraphics[scale=0.40]{img/5stars.png}
-        \textbf{tftpboot}\includegraphics[scale=0.40]{img/5stars.png}
+        \textbf{ceph}\includegraphics[scale=0.40]{img/3stars.png}
 	~
     \section{Containers}
+        \textbf{Rootless}\includegraphics[scale=0.40]{img/4stars.png}
         \textbf{LXC}\includegraphics[scale=0.40]{img/3stars.png}
         \textbf{Docker}\includegraphics[scale=0.40]{img/5stars.png}
         \textbf{OpenVZ}\includegraphics[scale=0.40]{img/4stars.png}
-        \textbf{rancher}\includegraphics[scale=0.40]{img/2stars.png}
-        \textbf{kubernetes}\includegraphics[scale=0.40]{img/2stars.png}
+        \textbf{Openshift}\includegraphics[scale=0.40]{img/2stars.png}
+        \textbf{kubernetes}\includegraphics[scale=0.40]{img/3stars.png}
         \textbf{swarm}\includegraphics[scale=0.40]{img/3stars.png}
 	~
     \section{Virtualization}
         \textbf{ESXi}\includegraphics[scale=0.40]{img/5stars.png}
-        \textbf{KVM}\includegraphics[scale=0.40]{img/3stars.png}
+        \textbf{KVM}\includegraphics[scale=0.40]{img/4stars.png}
         \textbf{libvirt}\includegraphics[scale=0.40]{img/5stars.png}
-        \textbf{openstack}\includegraphics[scale=0.40]{img/3stars.png}
+        \textbf{openstack}\includegraphics[scale=0.40]{img/4stars.png}
         \textbf{Qemu}\includegraphics[scale=0.40]{img/3stars.png}
         \textbf{vCloud}\includegraphics[scale=0.40]{img/4stars.png}
         \textbf{vCenter}\includegraphics[scale=0.40]{img/5stars.png}
@@ -203,7 +213,7 @@
         \textbf{fuel}\includegraphics[scale=0.40]{img/5stars.png}
         \textbf{juju}\includegraphics[scale=0.40]{img/3stars.png}
         \textbf{maas}\includegraphics[scale=0.40]{img/4stars.png}
-        \textbf{tripleO}\includegraphics[scale=0.40]{img/5stars.png}
+        \textbf{tripleO}\includegraphics[scale=0.40]{img/4stars.png}
 	~
     \section{Databases}
         \textbf{firebird}\includegraphics[scale=0.40]{img/4stars.png}
@@ -288,6 +298,7 @@
 	}
 \end{entrylist}
 
+\newpage
 \section{Memberships}
 \begin{entrylist}
     \entry
@@ -306,7 +317,6 @@
         {French pentest team}
         {\emph{World wide security contests, local events, ctf, share, learn, develop}}
 \end{entrylist}
-\newpage
 
 \begin{aside}
     \section{Networking}
